syntax= "proto3";

package authsvc;


option go_package = "./internal/pb";


service AuthService {
 rpc AdminLogin(AdminLoginRequest) returns (AdminLoginResponse){} 
 rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse){}
 rpc UserLogin(UserLoginRequest) returns (UserLoginResponse) {}
 rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse){}
}


message AdminLoginRequest {
    string username =1;
    string password=2;
}

message AdminLoginResponse {
    int64 status=1;
    string msg=2;
    string token=3;
    string error=4;
}


message CreateAccountRequest {
    string username=1;
    string email=2;
    int64 phone=3;
    string password=4;
}

message CreateAccountResponse {
    int64 status=1; 
    string msg=2;
    string error=3;
}

// user can login using email, phone or using username
message UserLoginRequest {
    string loginInput=1;
    string password=2;
}


message UserLoginResponse {
    int64 status=1;
    string msg=2;
    string token=3;
    string error=4;
}


message ValidateTokenRequest{
   string token=1;
   string role=2;
}

message ValidateTokenResponse{
    int64 status=1;
    int64 userID=2;
}
